--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.cdnfonts.com/css/futura-pt" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="icon" href="/fotoBrasa.png">
     <title>mateobraselli</title>
   </head>
   <body>
